ST-285 Improve selected sections of 'Releases' based on suggestions from spell checker

--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -62,14 +62,14 @@ For the list of delivered tickets, please consult the [Low-Level Release Notes f
 
 ### Upgrade Notices
 
-- Upgrade to `v6.0` is only supported from `v5.0`. Please, upgrade to the latest `v5.0` before attempting upgrade to `v6.0`.
-- Upgrade to `v6.0` will break custom SSO integrations and will require a change to the `/etc/ipf-dex.yaml` file. Simply replace the `v5.0` in this file with `v6.0` and then run `systemctl restart ipf-dex`. If you would like assistance please contact your Solution Architect.
+- Upgrading to `6.0` is only supported from `5.0`. Please upgrade to the latest `5.0` before attempting to upgrade to `6.0`.
+- Upgrade to `6.0` will break custom SSO integrations and will require a change to the `/etc/ipf-dex.yaml` file. Simply replace the `v5.0` string in this file with `v6.0` and then run `systemctl restart ipf-dex`. If you would like assistance, please contact your Solution Architect.
 - This release brings changes to IP Fabric data model. Snapshots need to be **unloaded and loaded back** to be updated. **The locked snapshots are not unloaded automatically**. It would help if you reloaded them manually after the upgrade (unlock them, perform unload, load them back and lock them again). Otherwise, you might experience issues with diagrams, and you will be missing attributes from the snapshot.
-- Introduction of RBAC and how security tokens are currently handled led to change in how large file downloads are handled (snapshots, tech supports, and such). Implementation has unfortunate limits, which we will address in the upcoming releases. These include missing the `Content-Length` header due to content being downloaded via JavaScript to browser memory. The practical impact is that the progress bar and ETA must be included. It may be extensive to the RAM.
+- Introduction of RBAC and how security tokens are currently handled led to a change in how large file downloads are handled (snapshots, tech supports, and such). Implementation has unfortunate limits, which we will address in the upcoming releases. These include missing the `Content-Length` header due to content being downloaded via JavaScript to browser memory. The practical impact is that the progress bar and ETA must be included. It may be extensive to the RAM.
 
 ### Attributes
 
-You can now configure custom attributes for devices, this can be found under `Settings` --> `Device Attributes`.
+You can now configure custom attributes for devices, this can be found under **Settings --> Device Attributes**.
 
 Site separation is also fully backed by attributes by now. That resulted in API changes, for example `siteKey` has been removed from inventory calls.
 
@@ -77,8 +77,8 @@ Site separation is also fully backed by attributes by now. That resulted in API 
 
 You can now specify the level of access a user has by restricting the ability to use only certain **API Endpoints** (API calls), or you can restrict which devices the user has access to via `siteName` **Attributes scope**. New settings can be found under:
 
-- `Settings` --> `User Management` --> `Polices`
-- `Settings` --> `User Management` --> `Roles`
+- **Settings --> User Management --> Polices**
+- **Settings --> User Management --> Roles**
 
 !!! Info
 
@@ -92,7 +92,7 @@ You can now specify the level of access a user has by restricting the ability to
   - Save Historical Data
   - Compute Intent Verification Rules
 
-### Changes to IP Fabric Appliance config wizard
+### Changes to IP Fabric Appliance Config Wizard
 
 - Starting in 6.0, when setting the hostname in the config wizard, the hostname will follow [RFC1035 Section 2.3.1](https://www.rfc-editor.org/rfc/rfc1035#section-2.3.1) standards.
 
@@ -120,7 +120,7 @@ You can now specify the level of access a user has by restricting the ability to
 - On Palo Alto firewall new hostname format is used -- `hostname/vsysName` instead of `hostname/vsysId`.
 - Logical Devices -- Added a summary table of all discovered logical firewalls (contexts, VSYS, VDOM) and Cisco Nexus VDCs.
 - AWS -- it is now possible to set multiple regions and [AssumeRoles](https://docs.aws.amazon.com/STS/latest/APIReference/API_AssumeRole.html) in one configuration.
-- Huawei -- New OS version parsing. We now show more Huawei like OS versioning e.g. `V800R021C00SPC100` instead of `8.210`.
+- Huawei -- New OS version parsing. We now show more Huawei-like OS versioning e.g. `V800R021C00SPC100` instead of `8.210`.
 
 ### Logging
 
