--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -24,7 +24,7 @@ For the list of delivered tickets, please consult the [Low-Level Release Notes f
 ### Bug Fixes
 
 - Issue of switching into FortiGate VDOM fixed
-- Speed of Check Point discovery optimized -- parallel load of API data enabled and duplicate requests eliminated
+- Speed of Check Point discovery optimized -- parallel load of API data enabled, and duplicate requests eliminated
 - Cisco `show flow monitor` command parsing refactored to prevent an issue of a too high regular expression backtracking
 
 ## v6.1.0 (February 21st, 2023)
@@ -42,10 +42,10 @@ For the list of delivered tickets, please consult the [Low-Level Release Notes f
 
 ### Upgrade Notices
 
-- Upgrade to `v6.1` will break custom SSO integrations and will require a change to the `/etc/ipf-dex.yaml` file. Simply replace the `v6.0` in this file with `v6.1` and then run `systemctl restart ipf-dex`. If you would like assistance please contact your Solution Architect.
+- Upgrade to `6.1` will break custom SSO integrations and will require a change to the `/etc/ipf-dex.yaml` file. Simply replace the `v6.0` string in this file with `v6.1` and then run `systemctl restart ipf-dex`. If you would like assistance, please contact your Solution Architect.
 - Forcepoint -- More features supported, mainly added support for SMC API (see our [feature matrix](https://matrix.ipfabric.io) for more details).
 
-### Noticeable changes
+### Noticeable Changes
 
 - Removed the End User Licensing agreement (EULA) acceptance step on a user's first log-in. A user approves EULA on loading a license.
 - Web front-end migrated from local storage to cookie-based storage for access and refresh tokens.
@@ -60,7 +60,7 @@ For the list of delivered tickets, please consult the [Low-Level Release Notes f
 - Removed "Technology > Spanning Tree > STP Stability" table from frontend and marked API endpoint `/tables/spanning-tree/topology` deprecated.
   "STP instances" table can be used instead.
 - Clarified [password requirements and complexity checks](../../System_Administration/boot_wizard/change_osadmin_pass.md) for the `osadmin` user.
-- Added a hard limit on number of retries for all http based vendor API discovery (except AWS). These are triggered when vendor API server is assumed to be overloaded.
+- Added a hard limit on number of retries for all HTTP-based vendor API discovery (except AWS). These are triggered when vendor API server is assumed to be overloaded.
 
 ### Bug Fixes
 
@@ -82,7 +82,7 @@ For the list of delivered tickets, please consult the [Low-Level Release Notes f
   - Added support for FabricPath in end-to-end path tracing.
   - Updated EoL information.
   - Viptela
-    - Device information will not be fetched if device is not successfully synchronized within the vManage.
+    - Device information will not be fetched if the device is not successfully synchronized within the vManage.
     - Lowered the maximum number of concurrent requests from a discovery worker to a Viptela server from 250 to 75 concurrent requests. This should decrease the workload on the Viptela server and increase its availability during the discovery process.
 - Extreme -- Updated EoL information.
 - F5
