--- a/docs/releases/release_notes/6.2.md
+++ b/docs/releases/release_notes/6.2.md
@@ -43,11 +43,11 @@ SHA256 (ipfabric-update-6_2_1+0.tar.gz.sig) = f255329e2cecab9f819feaafdf0f182d69
 MD5(ipfabric-update-6_2_1+0.tar.gz.sig) = cfe8cc8f05b4b3f8435612176d5d6e62
 ```
 
-### Backward incompatible changes
+### Backward Incompatible Changes
 
 - Tables for Cisco APIC (endpoint group contracts, applications, bridge domains and controllers) have `siteName` and `hostname` columns replaced by `apiUrl` string column.
 
-### Noticeable changes
+### Noticeable Changes
 
 - Limiting the number of the Discovery services restarts -- only 1 restart per service is allowed (previously unlimited). Crashed service will impact the IP Fabric ability to finish running discovery or start a new one. Investigation of the cause of the restart is advised.
 
@@ -66,14 +66,14 @@ MD5(ipfabric-update-6_2_1+0.tar.gz.sig) = cfe8cc8f05b4b3f8435612176d5d6e62
   - Panos -- Added support for license (see our [feature matrix](https://matrix.ipfabric.io) for more details).
   - Prisma -- Added support for management tasks (see our [feature matrix](https://matrix.ipfabric.io) for more details).
 
-### Underlying Operating System and 3rd party packages
+### Underlying Operating System and 3rd-Party Packages
 
-- The `dex` package used for SSO was upgraded from version 2.30.2 to latest version 2.36.0, see [their release notes](https://github.com/dexidp/dex/releases).
+- The `dex` package used for SSO has been upgraded from version `2.30.2` to the latest version `2.36.0`, see [their release notes](https://github.com/dexidp/dex/releases).
 - Added several tools to simplify image management and troubleshooting. We are explicitly including the following -- `dnsutils`, `htop`, `ldap-utils`, `lftp`, `libcap2-bin`, `lsof`, `mtr-tiny`, `nano`, `net-tools`, `ncdu`, `screen`, `sntp`, `strace`, `tcpd`, `tcpdump`, `telnet`, `tmux`, `traceroute`, `vim`, `wget`.
 
 ### Upgrade Notices
 
-- Upgrade to `v6.2` will break custom SSO integrations and will require a change to the `/etc/ipf-dex.yaml` file. Simply replace the `vX.Y` in this file with `v6.2` and then run `systemctl restart ipf-dex`.
+- Upgrade to `6.2` will break custom SSO integrations and will require a change to the `/etc/ipf-dex.yaml` file. Simply replace the `vX.Y` string in this file with `v6.2` and then run `systemctl restart ipf-dex`.
 
   ```yaml
   staticClients:
@@ -82,4 +82,4 @@ MD5(ipfabric-update-6_2_1+0.tar.gz.sig) = cfe8cc8f05b4b3f8435612176d5d6e62
         - "https://demo1.eu.ipfabric.io/api/vX.Y/auth/external/azure"
   ```
 
-  For more information, please refer to the [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml). If you would like assistance please contact your Solution Architect.
+  For more information, please refer to the [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml). If you would like assistance, please contact your Solution Architect.
