--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -11,7 +11,7 @@ description: In this section, you can find the release notes for v6.3 releases.
 ### Upgrade Notices
 
 - During the update process locked snapshots will be unloaded together with other snapshots and their lock will be preserved. Therefore, such snapshots won't be deleted by snapshot retention.
-- Upgrade to `v6.3` will break custom SSO integrations and will require a change to the `/etc/ipf-dex.yaml` file. Simply replace the `vX.Y` in this file with `v6.3` and then run `systemctl restart ipf-dex`.
+- Upgrade to `6.3` will break custom SSO integrations and will require a change to the `/etc/ipf-dex.yaml` file. Simply replace the `vX.Y` string in this file with `v6.3` and then run `systemctl restart ipf-dex`.
 
   ```yaml
   staticClients:
@@ -20,7 +20,7 @@ description: In this section, you can find the release notes for v6.3 releases.
         - "https://demo1.eu.ipfabric.io/api/vX.Y/auth/external/azure"
   ```
 
-  For more information, please refer to the [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml). If you would like assistance please contact your Solution Architect.
+  For more information, please refer to the [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml). If you would like assistance, please contact your Solution Architect.
 
 ## v6.3.2 (September 4th, 2023)
 
@@ -37,7 +37,7 @@ SHA256 (ipfabric-6-3-2+1.ova) = 68cf6f3af1ae6ba37247947ce1fbdce8716198fe399903b6
 MD5 (ipfabric-6-3-2+1.ova) = 85a8723cfa734aa58c6d0a9f23349809
 ```
 
-- A fix for SSO has been implemented to ensure that updating the `redirectURIs` in the `/etc/ipf-dex.yaml` configuration file is only required after a major version upgrade (i.e. `6.3.0` --> `7.0.0`). For more information and example please see the [SSO Static Clients](../../IP_Fabric_Settings/administration/sso.md#static-clients) documentation.
+- A fix for SSO has been implemented to ensure that updating the `redirectURIs` in the `/etc/ipf-dex.yaml` configuration file is only required after a major version upgrade (i.e. `6.3.0` --> `7.0.0`). For more information and an example, please see the [SSO Static Clients](../../IP_Fabric_Settings/administration/sso.md#static-clients) documentation.
 
 ## v6.3.1 (August 16th, 2023)
 
@@ -50,37 +50,37 @@ SHA256 (ipfabric-6-3-1+1.ova) = 32931352ce394d184c7f74d570b073dcabd529eff0bcbe30
 MD5 (ipfabric-6-3-1+1.ova) = bacc07182c48474b943924283b01e334
 ```
 
-### Versioned API Error responses
+### Versioned API Error Responses
 
-- All version related HTTP errors have aligned with [documentation](../../IP_Fabric_API/index.md#api-versioning). Improperly set version in request will result in an error response with `410 Gone` HTTP code and current product and API versions in its response body. Before it was returning `404 Not Found`.
+- All version-related HTTP errors have aligned with [documentation](../../IP_Fabric_API/index.md#api-versioning). Improperly set version in request will result in an error response with `410 Gone` HTTP code and current product and API versions in its response body. Before it was returning `404 Not Found`.
 
 ### Discovery
 
-- Number of devices processed by a single discovery worker is now configurable. Reach out to the support or solution architect team if adjustments are needed.
+- The number of devices processed by a single discovery worker is now configurable. Reach out to the support or solution architect team if adjustments are needed.
 
 ### Fixed Known Issues
 
 - Editing OUI entries is broken in the UI (**Settings --> Discovery & Snapshots --> Global Configuration --> OUI**).
-  OUI can be viewed and all previous changes are kept, but cannot be added or changed at the moment.
+  OUIs can be viewed, and all previous changes are kept. But OUIs cannot be added or changed at the moment.
   - ID: `NIM-11931`
   - Root cause: UI uses wrong API endpoint URLs after restructuring settings menu.
   - Workaround: Use API `/settings/oui/*` directly.
-  - Affected version: 6.3.0
+  - Affected version: `6.3.0`
 - Custom policies with access to table endpoints don't allow to export table as CSV
   - ID: `NIM-11916`
   - Root cause: Custom policies could grant access only to `POST` HTTP method on table endpoints while export uses `GET` method
   - Workaround: Use admin access to export tables
-  - Affected version: 6.3.0
+  - Affected version: `6.3.0`
 - CSV exports blank file when Intent Filter is applied (any filter with a `color`)
-  - Root cause: CSV export does not support exporting `reports` (intent) information with the data causing the filter returning no data.
+  - Root cause: CSV export does not support exporting `reports` (intent) information with the data causing the filter to return no data.
   - ID: `NIM-12011`
   - Workaround: Use IP Fabric API to download the filter data and convert to CSV
-  - Affected versions: 6.3.0
+  - Affected versions: `6.3.0`
 - Routing table parsing and validation may restart discovery workers and stop discovery
   - Root cause: Parsing and validation of large BGP routing tables can stuck discovery workers for more than allowed 1 minute. Discovery workers may be disconnected from the discovery process and restarted. If too many restarts of discovery workers are performed, discovery process will stop.
   - ID: `NIM-11490`
   - Workaround: Limit download of BGP routing to minimum.
-  - Affected versions: 6.2.0 and later
+  - Affected versions: `6.2.0` and later
 - Product stopped respecting system's OpenSSL CA store
   - Root cause: product build doesn't include a respective flag `use-openssl-ca` for runtime
   - ID: `NIM-12047`
@@ -94,12 +94,12 @@ MD5 (ipfabric-6-3-1+1.ova) = bacc07182c48474b943924283b01e334
       Environment="NODE_OPTIONS=--use-openssl-ca"
       ```
     - restart nimpeeUpdate service using `systemctl restart nimpee-update`
-  - Affected versions: 6.3.0
+  - Affected versions: `6.3.0`
 - Lowered maximum memory for discovery worker process (from 6GB to 4GB)
   - Root cause: product build doesn't include a respective flag `max-old-space-size` for runtime
   - ID: `NIM-12047`
   - Workaround: no workaround
-  - Affected versions: 6.3.0
+  - Affected versions: `6.3.0`
 
 
 ## v6.3.0 (July 31st, 2023)
@@ -115,32 +115,32 @@ MD5 (ipfabric-6-3-0+4.ova) = ccac181a8c17a3f82cd14a0cdfa49b6f
 
 For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.3.0](../release_notes_low-level/6.x/6.3.x/6.3.0.md).
 
-### Backward incompatible changes
+### Backward-Incompatible Changes
 
-- API Tokens and Webhook Secrets become auto-generated and non-editable by a user. They are available to view only once after creation, and the user won't be able to view or edit them any further. From now, both tokens and secrets will always be 32 characters long and generated randomly. If API Token or Webhook secret values are lost, they should be recreated.
+- API Tokens and Webhook Secrets become auto-generated and non-editable by a user. They are available to view only once after creation, and the user won't be able to view or edit them any further. From now on, both tokens and secrets will always be 32 characters long and generated randomly. If API Token or Webhook secret values are lost, they should be recreated.
 - Column type of `selectorLocalAddress` and `selectorRemoteAddress` columns in IPsec tunnels table was changed to a string. We no longer allow `ip` filter operator with the given columns.
 - Legacy NAT tables have been replaced with NAT44 table (`tables/security/nat44`) in release 6.1. This release removes the remaining two legacy tables - `tables/addressing/nat/rules` and `tables/addressing/nat/pools`.
 
-### Important changes
+### Important Changes
 
 - Vendor API `Slug` can only contain `a-zA-Z0-9_-`. Previously created configurations will be automatically modified by removing not-allowed characters from `Slug` according to the new validation rules.
 - SSO `roleName` can only contain `a-zA-Z0-9_-`. Previously created roles will be automatically modified by removing not-allowed characters from role name according to the new validation rules. Make sure specified `roleName` refers to the existing role in the system.
-- Limiting the number of the Discovery services restarts -- from now on it is possible to change the default number of discovery service restarts. This may help you if your full discovery never completes. To change this setting, please contact our customer support team.
+- Limiting the number of the Discovery services restarts -- from now on, it is possible to change the default number of discovery service restarts. This may help you if your full discovery never completes. To change this setting, please contact our customer support team.
 - You can use the `Test Connection` button to check the Vendor API connectivity settings. The connection is not tested automatically with each change, but only when you click the button. This lets you save the Vendor API settings even if the controller is unreachable from IP Fabric.
 
-### New table layout
+### New Table Layout
 
 In most sections with tables, we have switched to the new table layout (which also includes improved configuration of `Intent Verification Rules` and `Advanced Filters`).
 
 ![Comparison of Old table and New table layouts](6.3_compare_old_and_new_tables.png)
 
-### New tables for customers using RBAC
+### New Tables for Customers Using RBAC
 
 The following new tables have been added to IP Fabric. If you are utilizing RBAC
 please verify and update your
 [Policies](../../IP_Fabric_Settings/administration/policies.md) to ensure your
-users are able to view them as well as using the Path Lookup autocomplete.
-If you need assistance please contact your Solution Architect.
+users can view them as well as using the Path Lookup autocomplete.
+If you need assistance, please contact your Solution Architect.
 
 - Technology Tables
   - POST `/tables/serial-ports` (Technology --> Serial Ports)
@@ -170,7 +170,7 @@ If you need assistance please contact your Solution Architect.
   - New Vendor API worker -- we have added a new worker to IP Fabric that only handles Vendor API data. Before, `worker@1` processed both Vendor API and CLI data. This change allows us to process up to 60 Vendor API devices simultaneously, instead of 20. You can contact our customer support team to adjust this default value if necessary.
   - Vendor API load-balancing -- IP Fabric can now process devices from multiple Vendor API controllers simultaneously. This change should speed up the discovery process and reduce the load on the Vendor API controllers.
 
-### Re-organized Settings menu structure
+### Re-organized Settings Menu Structure
 
 To make the **Settings** menu more logical and intuitive, we have re-organized its items (including renaming some of them).
 
@@ -203,9 +203,10 @@ The following table shows how the items in the old menu map to those in the new 
 | OUI                                           | Discovery & Snapshots --> Global Configuration --> OUI                    |
 | Configuration Wizard                          | (unchanged)                                                               |
 
-### Known issues
+### Known Issues
+
 - Tasker does not follow restart stop limit
   - ID `NIM-12058`
-  - Root cause: Tasker service does not follow limit of 3 restarts: If during the hybrid Vendor API discovery (APIC, FTD, Check Point, etc.) `tasker` process encounters an issue, it is restarted and discovery is started anew. This can lead to infinite discovery and filling the system disk with logs.
+  - Root cause: Tasker service does not follow limit of 3 restarts: If during the hybrid Vendor API discovery (APIC, FTD, Check Point, etc.) `tasker` process encounters an issue, it is restarted, and discovery is started anew. This can lead to infinite discovery and filling the system disk with logs.
   - Workaround: no workaround
-  - Affected versions: 6.2.0
+  - Affected versions: `6.2.0`
