--- a/docs/releases/release_notes/6.4.md
+++ b/docs/releases/release_notes/6.4.md
@@ -11,7 +11,7 @@ description: In this section, you can find the release notes for v6.4 releases.
 ### Upgrade Notices
 
 - During the update process, locked snapshots will be unloaded together with other snapshots and their lock will be preserved. Therefore, such snapshots won't be deleted by snapshot retention.
-- Upgrade to `v6.4` may break custom SSO integrations and will require a change to the `/etc/ipf-dex.yaml` file. Since `6.3.2` release, we are omitting minor API version for SSO configuration and only major version will need to be changed with the next major IP Fabric version. Simply replace the `vX.Y` in this file with `v6` and then run `systemctl restart ipf-dex`.
+- Upgrade to `6.4` may break custom SSO integrations and will require a change to the `/etc/ipf-dex.yaml` file. Since the `6.3.2` release, we are omitting minor API version for SSO configuration, and only major version will need to be changed with the next major IP Fabric version. Simply replace the `vX.Y` string in this file with `v6` and then run `systemctl restart ipf-dex`.
 
   ```yaml
   staticClients:
@@ -20,7 +20,7 @@ description: In this section, you can find the release notes for v6.4 releases.
         - "https://demo1.eu.ipfabric.io/api/vX/auth/external/azure"
   ```
 
-  For more information, please refer to the [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml). If you would like assistance please contact your Solution Architect.
+  For more information, please refer to the [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml). If you would like assistance, please contact your Solution Architect.
 
 ## v6.4.3 (GA, October 16th, 2023)
 
@@ -58,7 +58,7 @@ For the list of delivered tickets, please consult the [Low-Level Release Notes f
 
 ### Bug Fixes
 
-- Discovery process may got stuck when processing last devices in the queue. Also Remaining devices
+- Discovery process may get stuck when processing last devices in the queue. Also Remaining devices
   for the discovery are now being correctly removed from the queue.
 
 ## v6.4.0 (September 15th, 2023)
