--- a/docs/releases/release_notes/6.5.md
+++ b/docs/releases/release_notes/6.5.md
@@ -13,10 +13,10 @@ description: In this section, you can find the release notes for v6.5 releases.
 - During the update process, locked snapshots will be unloaded together with
   other snapshots and their lock will be preserved. Therefore, such snapshots
   won't be deleted by snapshot retention.
-- Upgrade to `v6.5` may break custom SSO integrations and will require a change
-  to the `/etc/ipf-dex.yaml` file. Since `6.3.2` release, we are omitting minor
-  API version for SSO configuration and only major version will need to be
-  changed with the next major IP Fabric version. Simply replace the `vX.Y` in
+- Upgrade to `6.5` may break custom SSO integrations and will require a change
+  to the `/etc/ipf-dex.yaml` file. Since the `6.3.2` release, we are omitting minor
+  API version for SSO configuration, and only major version will need to be
+  changed with the next major IP Fabric version. Simply replace the `vX.Y` string in
   this file with `v6` and then run `systemctl restart ipf-dex`.
 
   ```yaml
@@ -28,7 +28,7 @@ description: In this section, you can find the release notes for v6.5 releases.
 
   For more information, please refer to the
   [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml).
-  If you would like assistance please contact your Solution Architect.
+  If you would like assistance, please contact your Solution Architect.
 
 ## v6.5.2 (GA, December 04th, 2023)
 
@@ -66,7 +66,7 @@ All secure (read "encrypted with OpenSSL") connections made by IP Fabric have
 forced `DEFAULT@SECLEVEL=0` to allow connections to devices with older OpenSSL
 versions (which leads to the use of ciphers that are now considered weak). This
 is just a temporary solution and will be removed in the future. We are working
-on a solution to allow OpenSSL being configured by the user from the outside of
+on a solution to allow OpenSSL to be configured by the user from the outside of
 the `node.js` process.
 
 ### Known Issues
@@ -84,7 +84,7 @@ the `node.js` process.
     Private Gateways (not both types at the same time).
   - DXGW partial routing table -- based on allowed prefixes specified in Direct
     Connect Gateway Association. DXGW routing table is currently missing
-    prefixes from on-premise routers.
+    prefixes from on-premises routers.
   - L2/L3 interfaces name on TGWs and VGWs directing towards DXGW.
   - Renamed DCGW to DXGW
 - Check Point Gaia
@@ -94,7 +94,7 @@ the `node.js` process.
     to set up management servers.
 - Cisco
   - Viptela -- to prevent long discovery time, limit for OMP route API endpoints
-    was added. Default value is 100. (see our
+    was added. The default value is 100. (see our
     [documentation](../../support/known_issues/Vendors/cisco/Viptela_cEdge_omp_limit.md)
     for more details)
   - Firepower -- extend support to map policies assigned to device clusters.
@@ -127,7 +127,7 @@ Architect team and we will gladly help you with enabling these features.
     We introduced a new feature flag `USE_FMC_NONEXPANDED_ICMP_CALL` which
     downloads ICMP objects definition 1 by 1.
   - ACI -- `fvTenant` Cisco APIC endpoint can fail in some environments due to
-    size of response output. The `USE_ACI_FVTENANT_ENDPOINT` flag separates
+    the size of response output. The `USE_ACI_FVTENANT_ENDPOINT` flag separates
     subclasses into single parameter requests.
 - Google Cloud Platform
   - Basic discovery support was added, still under development as firewall and
