--- a/docs/releases/release_notes/6.6.md
+++ b/docs/releases/release_notes/6.6.md
@@ -24,10 +24,10 @@ MD5 (ipfabric-6-6-3+0.ova) = e52d04cfcde3d68bc768010785762249
 - During the update process, locked snapshots will be unloaded together with
   other snapshots and their lock will be preserved. Therefore, such snapshots
   won't be deleted by snapshot retention.
-- Upgrade to `v6.6` may break custom SSO integrations and will require a change
-  to the `/etc/ipf-dex.yaml` file. Since `6.3.2` release, we are omitting minor
-  API version for SSO configuration and only major version will need to be
-  changed with the next major IP Fabric version. Simply replace the `vX.Y` in
+- Upgrade to `6.6` may break custom SSO integrations and will require a change
+  to the `/etc/ipf-dex.yaml` file. Since the `6.3.2` release, we are omitting minor
+  API version for SSO configuration, and only major version will need to be
+  changed with the next major IP Fabric version. Simply replace the `vX.Y` string in
   this file with `v6` and then run `systemctl restart ipf-dex`.
 
   ```yaml
@@ -39,9 +39,9 @@ MD5 (ipfabric-6-6-3+0.ova) = e52d04cfcde3d68bc768010785762249
 
   For more information, please refer to the
   [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml).
-  If you would like assistance please contact your Solution Architect.
+  If you would like assistance, please contact your Solution Architect.
 
-### Network discovery
+### Network Discovery
 
 - Fortinet
   - FortiGate -- Added initial support for Aggregate IPsec tunnels with limited support in path-lookup -- evaluation of security rules is not supported yet.
@@ -58,7 +58,7 @@ MD5 (ipfabric-6-6-3+0.ova) = e52d04cfcde3d68bc768010785762249
 - Palo Alto
   - PAN-OS -- Devices banners are now being parsed and stored in our tables. See [Banner](../../IP_Fabric_GUI/technology_tables/management_table.md#Banner) for more details.
 
-### Important product changes
+### Important Product Changes
 
 - API-discovered devices are now available in the global Device Attributes settings via Serial number search autocomplete.
 - A request to `POST /discovery/trigger-config-backup` now will return `403 Forbidden` instead of `404 Not Found` if an API-discovered device `sn` is provided as parameter.
@@ -74,9 +74,9 @@ Newly added features which need to be explicitly enabled in service files. If yo
   - Basic discovery support was added as PoC and needs to be enabled manually
     (`ENABLE_DISCOVERY_DEVICES_CITRIX`).
 
-### Known issues
+### Known Issues
 
-#### State refresh issues in `Discovery Snapshot` section with webhook enabled
+#### State Refresh Issues in `Discovery Snapshot` Section With Webhook Enabled
 
 When a webhook is configured and enabled in **Settings --> Integration -->
 Webhooks**, a newly started discovery won't show progress until you switch to
@@ -91,7 +91,7 @@ You may also encounter that after deleting a snapshot, it is still being shown
 among `Loaded/Unloaded Snapshots` until you switch to another menu section and
 back (or until you refresh the page).
 
-#### `Network Analysis Report` table not showing all loaded snapshots
+#### `Network Analysis Report` Table Not Showing All Loaded Snapshots
 
 **Reports --> Network Analysis Report** should allow you to download `Network
 Analysis Report` documents for each loaded snapshot. However, on version `6.6`
