--- a/docs/releases/release_notes/5.0.md
+++ b/docs/releases/release_notes/5.0.md
@@ -21,7 +21,7 @@ TAR MD5: 62518242728b95c08f5362ebcddec140
 !!! warning "Read All Upgrade Notices"
 
     Please read all v5.0.0 UPGRADE NOTICES, WARNINGS, and IMPORTANT messages prior to beginning installation.
-    This upgrade requires IP Fabric to be on `4.4.3` or greater prior to upgrading to `5.0.1`.
+    This upgrade requires IP Fabric to be on `4.4.3` or greater prior to upgrading to `5.0.2`.
 
 ### Bug Fixes
 
@@ -92,9 +92,9 @@ QCOW MD5: 0204de624001d1dfe8067e68f11ef3c5
 
 !!! warning "SSO and API versioning"
 
-    Upgrade to `5.0.0` will break custom SSO integrations an will require
+    Upgrade to `5.0.0` will break custom SSO integrations and will require
     changes to your files prior to re-enabling. Before upgrading and if you have
-    SSO deployed please contact your Solution Architect to copy your custom
+    SSO deployed, please contact your Solution Architect to copy your custom
     settings and and re-deploy them after the update.
 
 !!! warning "Input validation"
@@ -112,10 +112,10 @@ QCOW MD5: 0204de624001d1dfe8067e68f11ef3c5
 
     The first phase of a new implementation of Role-Based Access Control is
     included in `5.0.0`. There is a known caveat where generation of API tokens
-    does not take into account the new RBAC roles – this will be remedied in
-    `5.0.0`. If you are planning on using Roles and API Tokens it is
+    does not consider the new RBAC roles – this will be remedied in
+    `5.0.0`. If you are planning on using Roles and API Tokens, it is
     recommended to wait for the fix before assigning any user to the custom
-    roles. If a user is in a custom Role they will not be able to create an API
+    roles. If a user is in a custom Role, they will not be able to create an API
     token until the next patch release.
 
 !!! important "Extreme Family Rename"
@@ -142,14 +142,14 @@ QCOW MD5: 0204de624001d1dfe8067e68f11ef3c5
 
 - This upgrade requires IP Fabric to be on `4.4.3` prior to upgrade to `5.0.0`. IP Fabric `4.4.2` or lower will not work -- please upgrade to `4.4.3` using the normal method before carrying out the `5.0.0` upgrade process.
 - Due to the major changes stated above, automatic updates will be disabled for this release and will require manual upgrade.
-- Prior to update please ensure you perform a [backup of your system](../../System_Administration/System_Administration_UI/restore_or_backup.md) or it is highly recommended to create a VM snapshot.
+- Prior to update, please ensure you perform a [backup of your system](../../System_Administration/System_Administration_UI/restore_or_backup.md) or it is highly recommended to create a VM snapshot.
 - It is recommended (for all updates) to unload all snapshots prior to performing the upgrade.
 - Requires 10GB of free disk space.
 - Estimated upgrade time is around 20 minutes however depending on the resources of your VM it could take longer than an hour.
 - During update to `5.0.0` no message about the update being finished is shown and a refresh of the Admin page is required to check if the API and services are back online.
 - After approximately 5-10 minutes after the update file has finished uploading to the server you should be able to log in to the IPF CLI as `osadmin` and run the following command to track installation progress
   - `tail -f /var/log/nimpee/dist_upgrade.log`
-  - If `tail` command is not found wait a few minutes and log out and back in to the CLI.
+  - If the `tail` command is not found, wait a few minutes and log out and back in to the CLI.
 - Once upgrade has finished the system will reboot (see below the example output of the `dist_upgrade.log` file).
 - After all updates, please [**Clear Browser Cache**](../index.md).
 - Not all new features will be available until a new snapshot is created on the updated version.
@@ -157,7 +157,7 @@ QCOW MD5: 0204de624001d1dfe8067e68f11ef3c5
   - Log in to the **System Administration** page located on port `8443`.
   - In the `System Status` page under `System Services`, you will find `ArangoDB`.
   - Next to the status color is a `restart` button which will restart the service.
-- If you run into any other issues during or after the upgrade please open a [support ticket](http://support.ipfabric.io/).
+- If you run into any other issues during or after the upgrade, please open a [support ticket](http://support.ipfabric.io/).
 
 Example output of successful `/var/log/nimpee/dist_upgrade.log` log file:
 
@@ -183,7 +183,7 @@ osadmin@ipfabric:~$ tail -f /var/log/nimpee/dist_upgrade.log
 - Ruckus Wireless controller
 - Dell SmartFabric OS10 Basic Discovery
 - Cisco Meraki has been migrated from API `v0` to API `v1`
-  - Following the announcement of Meraki's addition of Cisco Catalyst switches we have ensured that these will be only discoverable via CLI at this time and excluded in the Meraki discovery.
+  - Following the announcement of Meraki's addition of Cisco Catalyst switches, we have ensured that these will be only discoverable via CLI at this time and excluded in the Meraki discovery.
 
 ### Features -- Protocol and Technology Support
 
@@ -235,7 +235,7 @@ IP Fabric `5.0.0` includes Phase 1 of RBAC. The most significant change is that 
 
 --8<-- "snippets/cli_root_access.md"
 
-- All TLS version less than `1.3` have been deprecated.
+- All TLS versions older than `1.3` have been deprecated.
   - Some older browsers, proxies, or systems may have issues connecting to IP Fabric after this change.
   - To re-enable an older version please see [Custom TLS Settings](../../System_Administration/Command_Line_Interface/Custom_TLS.md) or contact your Solution Architect.
 - Boot Wizard Changes
