--- a/docs/releases/release_notes/6.7.md
+++ b/docs/releases/release_notes/6.7.md
@@ -12,7 +12,7 @@ tags: ["draft"]
 
 ## v6.7.0 (UNRELEASED)
 
-### Replacement of `nimpee startprod` and `nimpee stopprod` commands
+### Replacement of `nimpee startprod` and `nimpee stopprod` Commands
 
 - The `nimpee` script (`sys-nimpee.sh`) used to manage the IP Fabric services
   has been replaced with the `ipf-appliance` service group. You can use:
@@ -26,7 +26,7 @@ tags: ["draft"]
 
 #### Breaking Change in Intent Verification Checks
 
-Inconsistent behavior has been identified in the comparison of empty values in number columns between table data and intent verification checks. Empty values are now treated as the smallest possible value when compared to any number, both in tables and in intent verification checks.
+An inconsistent behavior was identified in the comparison of empty values in number columns between table data and intent verification checks. Empty values are now treated as the smallest possible value when compared to any number, both in tables and in intent verification checks.
 
 ### Network Discovery
 
@@ -41,9 +41,9 @@ Inconsistent behavior has been identified in the comparison of empty values in n
 
 - MAC addresses starting with `649EF3` are no longer incorrectly detected as IP Phones but as network devices.
 - The parameters that were originally hard-coded in vendor API clients, such as timeouts and number of re-sends, can now be configured in situ with the assistance of IP Fabric Support.
-- Allow dot character (`.`) in username. This is valid for Jumphost settings, SNMP configuration and system backup.
-- Sometimes Cisco FMC doesn't return access token, even for successful authentication requests. Our Cisco FMC client now detects this situation and re-authenticates.
+- The dot character (`.`) can be used in usernames for jumphost settings, SNMP configuration, and system backup.
+- Sometimes Cisco FMC doesn't return an access token, even for successful authentication requests. Our Cisco FMC client now detects this situation and re-authenticates.
 
-### 3rd party updates
+### 3rd-Party Updates
 
-- [dex -- A federated OpenID Connect provider](https://github.com/dexidp/dex) updated to `2.38.0`.
+- [dex -- A federated OpenID Connect provider](https://github.com/dexidp/dex) has been updated to version `2.38.0`.
