NIM-12385 6.7 RN - Document added FortiSwitch support

--- a/docs/releases/release_notes/6.7.md
+++ b/docs/releases/release_notes/6.7.md
@@ -47,3 +47,11 @@ An inconsistent behavior was identified in the comparison of empty values in num
 ### 3rd-Party Updates
 
 - [dex -- A federated OpenID Connect provider](https://github.com/dexidp/dex) has been updated to version `2.38.0`.
+
+### Experimental Features
+
+Newly added features which need to be explicitly enabled in service files. If you are interested in trying them out, please contact our Support or Solution Architect team and we will gladly help you with enabling these features.
+
+- FortiGate FortiSwitch
+  - Basic discovery support was added as PoC and needs to be enabled manually
+    (`ENABLE_DISCOVERY_DEVICES_FORTISWITCH`).
