Add `known issues` for GCP into the 6.7 release notes.

--- a/docs/releases/release_notes/6.7.md
+++ b/docs/releases/release_notes/6.7.md
@@ -53,5 +53,17 @@ An inconsistent behavior was identified in the comparison of empty values in num
 Newly added features which need to be explicitly enabled in service files. If you are interested in trying them out, please contact our Support or Solution Architect team and we will gladly help you with enabling these features.
 
 - FortiGate FortiSwitch
-  - Basic discovery support was added as PoC and needs to be enabled manually
-    (`ENABLE_DISCOVERY_DEVICES_FORTISWITCH`).
+  - Basic discovery support was added as PoC and needs to be enabled manually.
+    (`ENABLE_DISCOVERY_DEVICES_FORTISWITCH`)
+
+- Google Cloud Platform
+  - Improved support for already implemented features.
+  - Added support for BGP routing task on cloud routers.
+  - Use feature flag `ENABLE_DISCOVERY_DEVICES_GCP` to enable GCP discovery.
+
+### Known Issues
+
+- Google Cloud Platform -- Regional routing mode is currently unavailable and will default to global routing mode.
+To learn more about the difference between these modes, please refer to the
+[GCP API Documentation](https://cloud.google.com/compute/docs/reference/rest/v1/networks/get#:~:text=The%20network%2Dwide%20routing%20mode%20to%20use.%20If%20set%20to%20REGIONAL)
+or the [Cloud Router Overview](https://cloud.google.com/network-connectivity/docs/router/concepts/overview#route-advertisement-default).
