NIM-13179 Add docs for usage data collection

--- a/docs/releases/release_notes/6.7.md
+++ b/docs/releases/release_notes/6.7.md
@@ -23,6 +23,7 @@ tags: ["draft"]
 ### Important Product Changes
 
 - Cisco FMC client re-sends `GET` request once when it receives `200 OK` response with empty body.
+- We have started [collecting usage data](../../IP_Fabric_GUI/usage_data_collection.md).
 
 #### Breaking Change in Intent Verification Checks
 
