NIM-13767 6.7 RN - Mention fix for Silverpeak vendor API client

--- a/docs/releases/release_notes/6.7.md
+++ b/docs/releases/release_notes/6.7.md
@@ -45,6 +45,7 @@ An inconsistent behavior was identified in the comparison of empty values in num
 - The parameters that were originally hard-coded in vendor API clients, such as timeouts and number of re-sends, can now be configured in situ with the assistance of IP Fabric Support.
 - The dot character (`.`) can be used in usernames for jumphost settings, SNMP configuration, and system backup.
 - Sometimes Cisco FMC doesn't return an access token, even for successful authentication requests. Our Cisco FMC client now detects this situation and re-authenticates.
+- Fixed Silverpeak vendor API client that failed during re-authentication when it received no `orchCsrfToken` token.
 
 ### 3rd-Party Updates
 
