--- a/docs/releases/release_notes/6.7.md
+++ b/docs/releases/release_notes/6.7.md
@@ -38,6 +38,7 @@ An inconsistent behavior was identified in the comparison of empty values in num
 - Juniper
   - Mist -- We have improved the discovery speed for large networks. Instead of fetching data from Redis cache for each device and task, we now access the data directly from memory. This significantly eliminates the loading time.
 - FS -- Devices banners are now being parsed and stored in our tables. See [Banner](../../IP_Fabric_GUI/technology_tables/management_table.md#Banner) for more details.
+- Silver Peak (HPE Aruba EdgeConnect) -- Added support for new API [9.3 Endpoints](https://developer.arubanetworks.com/aruba-edgeconnect/docs/rest-api-table-for-93).
 
 ### Other Minor Changes
 
