NIM-13639 Azure - Mention added support for multiple subscriptions

--- a/docs/releases/release_notes/6.7.md
+++ b/docs/releases/release_notes/6.7.md
@@ -30,7 +30,7 @@ tags: ["draft"]
 An inconsistent behavior was identified in the comparison of empty values in number columns between table data and intent verification checks. Empty values are now treated as the smallest possible value when compared to any number, both in tables and in intent verification checks.
 
 ### Network Discovery
-
+- Azure -- Added support for discovery of multiple subscriptions within the same tenant. The **Subscription IDs** field for `Azure` in **Settings --> Discovery & Snapshots --> Discovery Settings --> Vendors API** is now optional, leave it empty to discover all available subscriptions. Required role permissions have been changed, see [Azure Networking -- Role Definitions for IP Fabric](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Azure_Networking.md##role-definitions-for-ip-fabric).
 - Check Point -- Added support for discovery of firewalls connected to Maestro Orchestrator.
 - Cisco
   - Viptela -- Added support for [Service Chaining](https://learningnetwork.cisco.com/s/article/cisco-sd-wan-service-chaining). Service chaining policies are modeled in PBR task. Other PBR Viptela functionality isn't supported.
